--- a/Back - Spring/src/main/resources/application.properties
+++ b/Back - Spring/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+# Configuración del server
 server.port=8081
+
+# Configuración de JWT
 spring.security.jwt.secret=secret
 spring.security.jwt.resource-ids=jwt
+
+# Configuración de H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+
+# Configuración de JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
