Feat: add data intializer method

--- a/Back - Spring/pom.xml
+++ b/Back - Spring/pom.xml
@@ -90,6 +90,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.4.2.Final</version> <!-- Puedes verificar la última versión en el repositorio de Maven -->
