feat: Manage creation exceptions

--- a/Back - Spring/pom.xml
+++ b/Back - Spring/pom.xml
@@ -96,6 +96,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version> <!-- Use the latest version available -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.4.2.Final</version> <!-- Puedes verificar la última versión en el repositorio de Maven -->
